add jdk 21 new features: * virtual thread * string templates * unnamed variables